# multibot_efort

./: CMakeLists.txt  README.md  package.xml
config/: tri-bot.rviz
data/: DHparameters.xlsx  plot.py  steel_preprocess.pcd
include/: arithmatic.h  cubicSpline.h  kinematic.h  path_generate.h  transformation.h
launch/: cloud_view.launch  display.launch  triarm_together.launch
meshes/: flange.STL  gun.STL  left_one.STL  mid_one.STL  polishing_tool.STL  right_one.STL  table.STL
meshes/er10/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
meshes/er20/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
scripts/: display.py  displayDIstance.py  motion.py
src/: cloud_visual.cpp  cubicSpline.cpp  displayDistance.cpp  kinematic.cpp  motion.cpp  path_planner.cpp  transformation.cpp  triarm1.cpp
test/: CMakeLists.txt  arithmatic.cpp  csv_io.cpp  data.csv  generatePointCloud.cpp  kinematicTest.cpp  path_generate.cpp  pointcloud_preprocess.cpp  testCubic.cpp
urdf/: assembly.urdf.xacro  env.urdf.xacro  er10.urdf.xacro  er20.urdf.xacro  polish_tool.urdf.xacro  tribot.urdf.xacro
